New Layout-IP Conversion missing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">GeoMessaging</string>
-    <string name="title_activity_main">Map</string>
+    <string name="title_activity_main">GEO Messaging</string>
 </resources>
