--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">GeoMessaging</string>
-    <string name="title_activity_main">GEO Messaging</string>
+    <string name="title_activity_main">GEOM</string>
+    <string name="continues">Apply</string>
+    <string name="cancel">Cancel</string>
 </resources>
