Corrections to be made: Manually set up Cell ID. Not changing MCST

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_activity_main">GEOM</string>
     <string name="continues">Apply</string>
     <string name="cancel">Cancel</string>
+    <string name="connected">Connect</string>
+    <string name="disconnected">Disconnect</string>
 </resources>
